[tool.poetry]
name = "tidal-async"
version = "0.1.0"
description = "Python Tidal streaming service unofficial API in async fashion supporting OAuth2 authentication"
authors = ["JuniorJPDJ <dev@juniorjpdj.pl>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6"
music-service-async-interface = { git = "https://github.com/FUMR/music-service-async-interface.git", rev = "5870434" }
androguard = { version = "^3.3.5", optional = true }
http-seekable-file = { git = "https://github.com/JuniorJPDJ/http-seekable-file.git", extras = ["async"], optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
client_id = ["androguard"]
filelike = ["http-seekable-file"]
# TODO [#18]: Make `filelike` extra depend on `music-service-async-interface['filelike']`, not directly on `http-seekable-file['async']`


[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tmp
)/
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
known_third_party = ["aiohttp", "mutagen"]
