[tool.poetry]
name = "tidal-async"
version = "0.1.0"
description = "Python Tidal streaming service unofficial API in async fashion supporting OAuth2 authentication"
authors = ["JuniorJPDJ <dev@juniorjpdj.pl>", "Kasper Seweryn <github@wvffle.net>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6"
music-service-async-interface = { git = "https://github.com/FUMR/music-service-async-interface.git", rev = "1b63d300b245bd483c69edecbbecfb641c94c45c" }
androguard = { version = "^3.3.5", optional = true }
http-seekable-file = { git = "https://github.com/JuniorJPDJ/http-seekable-file.git", tag = "v0.3.0", extras = ["async"], optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^2.12"
pytest = "^6.2"
pytest-asyncio = "^0.15"

[tool.poetry.extras]
client_id = ["androguard"]
filelike = ["http-seekable-file"]
# TODO [#18]: Make `filelike` extra depend on `music-service-async-interface['filelike']`, not directly on `http-seekable-file['async']`

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tmp
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["aiohttp", "music_service_async_interface", "mutagen"]
